pkg/manager/manifests/cli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hcp-cli-download
  name: hcp-cli-download
  namespace: multicluster-engine
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hcp-cli-download
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hcp-cli-download
        ocm-antiaffinity-selector: hcp-cli-download
    spec:
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
                - arm64
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 1
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists                     
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: ocm-antiaffinity-selector
                  operator: In
                  values:
                  - hcp-cli-download
              topologyKey: topology.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: ocm-antiaffinity-selector
                  operator: In
                  values:
                  - hcp-cli-download
              topologyKey: kubernetes.io/hostname
            weight: 35
      containers:
      - image: docker.io/rokejung/hypershift-addon-operator:1130f
        imagePullPolicy: IfNotPresent
        name: hcp-cli-download
        ports:
        - containerPort: 8080
          name: file-server
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      serviceAccount: hypershift-addon-manager-sa
      serviceAccountName: hypershift-addon-manager-sa
      terminationGracePeriodSeconds: 30
