pkg/manager/manifests/cli/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hcp-cli-download
  namespace: multicluster-engine
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hcp-cli-download
    weight: 100
  wildcardPolicy: None
